fix: blog editor, remove: text align from blog editor

--- a/src/styles/_blogEditor.scss
+++ b/src/styles/_blogEditor.scss
@@ -95,3 +95,23 @@
 .public-DraftEditor-content {
   padding: 10px;
 }
+
+.public-DraftStyleDefault-ltr {
+  text-align: inherit !important;
+}
+
+.rdw-center-aligned-block * {
+  text-align: center !important;
+}
+
+.rdw-left-aligned-block * {
+  text-align: left !important;
+}
+
+.rdw-right-aligned-block * {
+  text-align: right !important;
+}
+
+.rdw-justify-aligned-block * {
+  text-align: justify !important;
+}
